--- a/SampleCode/Python/sample_rag_langchain.ipynb
+++ b/SampleCode/Python/sample_rag_langchain.ipynb
@@ -66,7 +66,7 @@
    "source": [
     "from langchain import hub\n",
     "from langchain.chat_models import AzureChatOpenAI\n",
-    "from langchain.document_loaders.doc_intelligence import DocumentIntelligenceLoader\n",
+    "from langchain.document_loaders.doc_intelligence import AzureAIDocumentIntelligenceLoader\n",
     "from langchain.embeddings import AzureOpenAIEmbeddings\n",
     "from langchain.schema import StrOutputParser\n",
     "from langchain.schema.runnable import RunnablePassthrough\n",
@@ -87,11 +87,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Initiate Azure AI Document Intelligence to load the document and split it into chunks base on markdown headers.\n",
-    "\n",
-    "loader = DocumentIntelligenceLoader(file_path=\"<path to your file>\", api_key = doc_intelligence_key, api_endpoint = doc_intelligence_endpoint)\n",
+    "# Initiate Azure AI Document Intelligence to load the document. You can either specify file_path or url_path to load the document.\n",
+    "loader = AzureAIDocumentIntelligenceLoader(file_path=\"<path to your file>\", api_key = doc_intelligence_key, api_endpoint = doc_intelligence_endpoint)\n",
     "docs = loader.load()\n",
     "\n",
+    "# Split the document into chunks base on markdown headers.\n",
     "headers_to_split_on = [\n",
     "    (\"#\", \"Header 1\"),\n",
     "    (\"##\", \"Header 2\"),\n",
