update rag sample notebook

--- a/SampleCode/Python/sample_disambiguate_similar_characters.ipynb
+++ b/SampleCode/Python/sample_disambiguate_similar_characters.ipynb
@@ -95,7 +95,7 @@
     "        \n",
     "# if there are more than 1 possibility or no possible ICD-10 code, call Human-in-the-loop\n",
     "else:\n",
-    "    print(\"No valid ICD-10 codes generated.\")"
+    "    print(\"No valid ICD-10 codes generated.\")\n"
    ]
   }
  ],
