--- a/SampleCode/Python/sample_rag_langchain.ipynb
+++ b/SampleCode/Python/sample_rag_langchain.ipynb
@@ -34,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! pip install langchain openai azure-ai-documentintelligence azure-search-documents python-dotenv"
+    "! pip install langchain langchain-community openai azure-ai-documentintelligence azure-search-documents python-dotenv"
    ]
   },
   {
@@ -66,7 +66,7 @@
    "source": [
     "from langchain import hub\n",
     "from langchain.chat_models import AzureChatOpenAI\n",
-    "from langchain.document_loaders.doc_intelligence import AzureAIDocumentIntelligenceLoader\n",
+    "from langchain_community.document_loaders import AzureAIDocumentIntelligenceLoader\n",
     "from langchain.embeddings import AzureOpenAIEmbeddings\n",
     "from langchain.schema import StrOutputParser\n",
     "from langchain.schema.runnable import RunnablePassthrough\n",
@@ -88,7 +88,7 @@
    "outputs": [],
    "source": [
     "# Initiate Azure AI Document Intelligence to load the document. You can either specify file_path or url_path to load the document.\n",
-    "loader = AzureAIDocumentIntelligenceLoader(file_path=\"<path to your file>\", api_key = doc_intelligence_key, api_endpoint = doc_intelligence_endpoint)\n",
+    "loader = AzureAIDocumentIntelligenceLoader(file_path=\"<path to your file>\", api_key = doc_intelligence_key, api_endpoint = doc_intelligence_endpoint, api_model=\"prebuilt-layout\")\n",
     "docs = loader.load()\n",
     "\n",
     "# Split the document into chunks base on markdown headers.\n",
