update rag sample notebook

--- a/SampleCode/Python/sample_rag_langchain.ipynb
+++ b/SampleCode/Python/sample_rag_langchain.ipynb
@@ -34,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! pip install langchain langchain-community openai azure-ai-documentintelligence azure-search-documents python-dotenv"
+    "! pip install python-dotenv langchain langchain-community langchainhub openai tiktoken azure-ai-documentintelligence azure-identity azure-search-documents==11.4.0b8"
    ]
   },
   {
@@ -199,7 +199,7 @@
    "source": [
     "# Ask a question about the document\n",
     "\n",
-    "rag_chain.invoke(\"What is self RAG?\")"
+    "rag_chain.invoke(\"<your question>\")"
    ]
   },
   {
@@ -226,7 +226,7 @@
     "        \"context\": lambda input: format_docs(input[\"documents\"]),\n",
     "        \"question\": itemgetter(\"question\"),\n",
     "    }\n",
-    "    | rag_prompt_custom\n",
+    "    | prompt\n",
     "    | llm\n",
     "    | StrOutputParser()\n",
     ")\n",
