add sample code to identify cross page tables

--- a/SampleCode/Python/sample_identify_cross_page_tables.ipynb
+++ b/SampleCode/Python/sample_identify_cross_page_tables.ipynb
@@ -54,7 +54,6 @@
     "\"\"\"\n",
     "import os\n",
     "from dotenv import load_dotenv\n",
-    "import os\n",
     "from azure.core.credentials import AzureKeyCredential\n",
     "from azure.ai.documentintelligence import DocumentIntelligenceClient\n",
     "\n",
@@ -144,7 +143,7 @@
     "            pre_table = {\"pre_table_idx\": pre_table_idx, \"start\": pre_max_offset, \"end\": min_offset}\n",
     "            merge_tables_candidates.append(pre_table)\n",
     "        \n",
-    "        print(f\"Table has min span: {min_offset} and max span: {max_offset} on page {table_page}\")\n",
+    "        print(f\"Table {table_idx} has offset range: {min_offset} - {max_offset} on page {table_page}\")\n",
     "\n",
     "        pre_table_idx = table_idx\n",
     "        pre_table_page = table_page\n",
