update rag notebook

--- a/SampleCode/Python/sample_rag_langchain.ipynb
+++ b/SampleCode/Python/sample_rag_langchain.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "This notebook demonstrates an example of using [LangChain](https://www.langchain.com/) to delvelop a Retrieval Augmented Generation (RAG) pattern. It uses Azure AI Document Intelligence as document loader, which can extracts tables, paragraphs, and layout information from pdf, image, office and html files. The output markdown can be used in LangChain's markdown header splitter, which enables semantic chunking of the documents. Then the chunked documents are indexed into Azure AI Search vectore store. Given a user query, it will use Azure AI Search to get the relevant chunks, then feed the context into the prompt with the query to generate the answer.\n",
     "\n",
-    "![Semantic chunking in RAG](../media/semantic-chunking-rag.png)"
+    "![Semantic chunking in RAG](../media/semantic-chunking-rag.png)\n"
    ]
   },
   {
@@ -34,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! pip install python-dotenv langchain langchain-community langchainhub openai tiktoken azure-ai-documentintelligence azure-identity azure-search-documents==11.4.0b8"
+    "! pip install python-dotenv langchain langchain-community langchain-openai langchainhub openai tiktoken azure-ai-documentintelligence azure-identity azure-search-documents==11.4.0b8"
    ]
   },
   {
@@ -65,9 +65,9 @@
    "outputs": [],
    "source": [
     "from langchain import hub\n",
-    "from langchain.chat_models import AzureChatOpenAI\n",
+    "from langchain_openai import AzureChatOpenAI\n",
     "from langchain_community.document_loaders import AzureAIDocumentIntelligenceLoader\n",
-    "from langchain.embeddings import AzureOpenAIEmbeddings\n",
+    "from langchain_openai import AzureOpenAIEmbeddings\n",
     "from langchain.schema import StrOutputParser\n",
     "from langchain.schema.runnable import RunnablePassthrough\n",
     "from langchain.text_splitter import MarkdownHeaderTextSplitter\n",
@@ -122,7 +122,7 @@
     "\n",
     "aoai_embeddings = AzureOpenAIEmbeddings(\n",
     "    azure_deployment=\"<Azure OpenAI embeddings model>\",\n",
-    "    openai_api_version=\"<Azure OpenAI API version>\",  # e.g., \"2023-07-01-preview\"\n",
+    "    openai_api_version=\"<Azure OpenAI API version>\",  # e.g., \"2023-12-01-preview\"\n",
     ")\n",
     "\n",
     "vector_store_address: str = os.getenv(\"AZURE_SEARCH_ENDPOINT\")\n",
@@ -166,7 +166,7 @@
     "# Use a prompt for RAG that is checked into the LangChain prompt hub (https://smith.langchain.com/hub/rlm/rag-prompt?organizationId=989ad331-949f-4bac-9694-660074a208a7)\n",
     "prompt = hub.pull(\"rlm/rag-prompt\")\n",
     "llm = AzureChatOpenAI(\n",
-    "    openai_api_version=\"<Azure OpenAI API version>\",  # e.g., \"2023-07-01-preview\"\n",
+    "    openai_api_version=\"<Azure OpenAI API version>\",  # e.g., \"2023-12-01-preview\"\n",
     "    azure_deployment=\"<your chat model deployment name>\",\n",
     "    temperature=0,\n",
     ")\n",
