update figure understanding notebook and add readme entry

--- a/SampleCode/Python/sample_figure_understanding.ipynb
+++ b/SampleCode/Python/sample_figure_understanding.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Figure understanding & hierarchical document structure analysis\n",
     "\n",
-    "This notebook demonstrates an example of using Azure AI Document Intelligence to ouptut detected figures and hierarchical document structure (in markdown). It will then crop the figures and send image content (with its caption) to Azure Open AI GPTv model to understand the semantics. The image description will be used to update the markdown output, which can be further used for [semantic chunking](https://aka.ms/doc-gen-ai).\n",
+    "This notebook demonstrates an example of using Azure AI Document Intelligence to ouptut detected figures and hierarchical document structure (in markdown). It will then crop the figures and send figure content (with its caption) to Azure Open AI GPT-4V model to understand the semantics. The figure description will be used to update the markdown output, which can be further used for [semantic chunking](https://aka.ms/doc-gen-ai).\n",
     "\n",
     "![Advanced document insights with figure understanding and hierarchical document structure](../media/figure-understanding.png)"
    ]
@@ -34,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! pip install python-dotenv openai azure-ai-documentintelligence azure-identity"
+    "! pip install python-dotenv openai azure-ai-documentintelligence azure-identity pillow PyMuPDF"
    ]
   },
   {
@@ -62,7 +62,7 @@
     "\n",
     "aoai_api_base = os.getenv(\"AZURE_OPENAI_ENDPOINT\")\n",
     "aoai_api_key= os.getenv(\"AZURE_OPENAI_API_KEY\")\n",
-    "aoai_deployment_name = 'gpt-4v' # your model deployment name for GPTv\n",
+    "aoai_deployment_name = 'gpt-4v' # your model deployment name for GPT-4V\n",
     "aoai_api_version = '2024-02-15-preview' # this might change in the future"
    ]
   },
@@ -70,7 +70,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Crop image from the document (pdf or image) based on the bounding box"
+    "## Crop figure from the document (pdf or image) based on the bounding box"
    ]
   },
   {
@@ -150,7 +150,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Use Azure OpenAI (GPTv model) to understand the semantics of the image content"
+    "## Use Azure OpenAI (GPT-4V model) to understand the semantics of the figure content"
    ]
   },
   {
@@ -185,7 +185,7 @@
    "source": [
     "def understand_image_with_gptv(api_base, api_key, deployment_name, api_version, image_path, caption):\n",
     "    \"\"\"\n",
-    "    Generates a description for an image using the GPTv model.\n",
+    "    Generates a description for an image using the GPT-4V model.\n",
     "\n",
     "    Parameters:\n",
     "    - api_base (str): The base URL of the API.\n",
@@ -258,7 +258,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Update markdown figure content section with the description from GPTv model"
+    "## Update markdown figure content section with the description from GPT-4V model"
    ]
   },
   {
@@ -302,7 +302,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Analyze a document with Azure AI Document Intelligence Layout model and update image description in the markdown output"
+    "## Analyze a document with Azure AI Document Intelligence Layout model and update figure description in the markdown output"
    ]
   },
   {
