Fix file name spelling

--- a/SampleCode/Python/sample_identify_and_merge_cross_page_tables.ipynb
+++ b/SampleCode/Python/sample_identify_and_merge_cross_page_tables.ipynb
@@ -470,7 +470,7 @@
     "        print(\"=========================================================\")\n",
     "        start_idx = 0\n",
     "        for merged_table in merged_table_list:\n",
-    "            print(f\"Merged result of table {\", \".join([str(idx) for idx in merged_table[\"table_idx_list\"]])}\")\n",
+    "            print(f\"Merged result of table {', '.join([str(idx) for idx in merged_table['table_idx_list']])}\")\n",
     "            print(\"-----------------------------------------------------\")\n",
     "            print(merged_table[\"content\"])\n",
     "            print(\"-----------------------------------------------------\")\n",
