resolve review comments

--- a/SampleCode/Python/sample_figure_understanding.ipynb
+++ b/SampleCode/Python/sample_figure_understanding.ipynb
@@ -535,7 +535,7 @@
     "updated_md_with_figure_understanding = analyze_layout(\"data/layout-sample.pdf\", \"data/cropped\")\n",
     "\n",
     "print(\"-------------------------------------------------------------------------------------------\")\n",
-    "print(f\"Updated markdown content with figure understanding:\\n\\n {updated_md_with_figure_understanding}\")"
+    "print(f\"Updated markdown content with figure understanding:\\n\\n {updated_md_with_figure_understanding}\")\n"
    ]
   }
  ],
