add const for max token

--- a/SampleCode/Python/sample_figure_understanding.ipynb
+++ b/SampleCode/Python/sample_figure_understanding.ipynb
@@ -16,8 +16,8 @@
    "metadata": {},
    "source": [
     "## Prerequisites\n",
-    "- An Azure AI Document Intelligence resource in one of the 3 preview regions: **East US**, **West US2**, **West Europe** - follow [this document](https://learn.microsoft.com/azure/ai-services/document-intelligence/create-document-intelligence-resource?view=doc-intel-4.0.0) to create one if you don't have.\\n\",\n",
-    "- An Azure AI Search resource - follow [this document](https://learn.microsoft.com/azure/search/search-create-service-portal) to create one if you don't have.\\n\",\n",
+    "- An Azure AI Document Intelligence resource in one of the 3 preview regions: **East US**, **West US2**, **West Europe** - follow [this document](https://learn.microsoft.com/azure/ai-services/document-intelligence/create-document-intelligence-resource?view=doc-intel-4.0.0) to create one if you don't have.\n",
+    "- An Azure AI Search resource - follow [this document](https://learn.microsoft.com/azure/search/search-create-service-portal) to create one if you don't have.\n",
     "- An Azure OpenAI resource and deployments for embeddings model and chat model - follow [this document](https://learn.microsoft.com/azure/ai-services/openai/how-to/create-resource?pivots=web-portal) to create one if you don't have."
    ]
   },
@@ -183,6 +183,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "MAX_TOKENS = 2000\n",
+    "\n",
     "def understand_image_with_gptv(api_base, api_key, deployment_name, api_version, image_path, caption):\n",
     "    \"\"\"\n",
     "    Generates a description for an image using the GPT-4V model.\n",
@@ -225,7 +227,7 @@
     "                        }\n",
     "                    ] } \n",
     "                ],\n",
-    "                max_tokens=2000 \n",
+    "                max_tokens=MAX_TOKENS\n",
     "            )\n",
     "\n",
     "    else:\n",
@@ -246,7 +248,7 @@
     "                    }\n",
     "                ] } \n",
     "            ],\n",
-    "            max_tokens=2000 \n",
+    "            max_tokens=MAX_TOKENS\n",
     "        )\n",
     "\n",
     "    img_description = response.choices[0].message.content\n",
