--- a/SampleCode/Python/sample_figure_understanding.ipynb
+++ b/SampleCode/Python/sample_figure_understanding.ipynb
@@ -327,7 +327,9 @@
     "\n",
     "    \"\"\"\n",
     "    document_intelligence_client = DocumentIntelligenceClient(\n",
-    "        endpoint=doc_intelligence_endpoint, credential=AzureKeyCredential(doc_intelligence_key)\n",
+    "        endpoint=doc_intelligence_endpoint, \n",
+    "        credential=AzureKeyCredential(doc_intelligence_key),\n",
+    "        headers={\"x-ms-useragent\":\"sample-code-figure-understanding\"},\n",
     "    )\n",
     "\n",
     "    with open(input_file_path, \"rb\") as f:\n",
