--- a/SampleCode/Python/sample_figure_understanding.ipynb
+++ b/SampleCode/Python/sample_figure_understanding.ipynb
@@ -329,7 +329,7 @@
     "    document_intelligence_client = DocumentIntelligenceClient(\n",
     "        endpoint=doc_intelligence_endpoint, \n",
     "        credential=AzureKeyCredential(doc_intelligence_key),\n",
-    "        headers={\"x-ms-useragent\":\"sample-code-figure-understanding\"},\n",
+    "        headers={\"x-ms-useragent\":\"sample-code-figure-understanding/1.0.0\"},\n",
     "    )\n",
     "\n",
     "    with open(input_file_path, \"rb\") as f:\n",
