--- a/SampleCode/Python/sample_identify_and_merge_cross_page_tables.ipynb
+++ b/SampleCode/Python/sample_identify_and_merge_cross_page_tables.ipynb
@@ -390,7 +390,7 @@
     "    document_intelligence_client = DocumentIntelligenceClient(\n",
     "        endpoint=endpoint, \n",
     "        credential=AzureKeyCredential(key),\n",
-    "        headers={\"x-ms-useragent\":\"sample-code-merge-cross-tables\"},\n",
+    "        headers={\"x-ms-useragent\":\"sample-code-merge-cross-tables/1.0.0\"},\n",
     "    )\n",
     "\n",
     "    file_path = \"<The path to your file>\"\n",
