--- a/SampleCode/Python/sample_identify_cross_page_tables.ipynb
+++ b/SampleCode/Python/sample_identify_cross_page_tables.ipynb
@@ -195,7 +195,9 @@
     "    None\n",
     "    \"\"\"\n",
     "    document_intelligence_client = DocumentIntelligenceClient(\n",
-    "        endpoint=endpoint, credential=AzureKeyCredential(key)\n",
+    "        endpoint=endpoint, \n",
+    "        credential=AzureKeyCredential(key),\n",
+    "        headers={\"x-ms-useragent\":\"sample-code-identify-cross-tables/1.0.0\"},\n",
     "    )\n",
     "\n",
     "    file_path = \"<The path to your file>\"\n",
